--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ django-extensions==1.5.6
 django-extra-views==0.6.4
 django-haystack==2.3.1
 django-oscar==1.1.1
+django-postgrespool==0.3.0
 django-tables2==1.0.4
 django-treebeard==3.0
 django-widget-tweaks==1.3
@@ -27,6 +28,7 @@ rosetta==0.3
 scipy==0.16.0
 six==1.9.0
 sorl-thumbnail==12.2
+SQLAlchemy==1.0.8
 Unidecode==0.4.18
 wheel==0.24.0
 Whoosh==2.7.0
