--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,39 @@
 numpy==1.9.2
+scipy==0.15.1
+Babel==1.3
+dj-database-url==0.3.0
+Django==1.8.4
+django-appconf==1.0.1
+django-apps==0.1.0
+django-compressor==1.5
+django-debug-toolbar==1.3.2
+django-debug-toolbar-template-timings==0.6.4
+django-extensions==1.5.6
+django-extra-views==0.6.4
+django-haystack==2.3.1
+django-oscar==1.1.1
+django-postgrespool==0.3.0
+django-tables2==1.0.4
+django-treebeard==3.0
+django-widget-tweaks==1.3
+factory-boy==2.4.1
+gunicorn==19.3.0
+mock==1.0.1
+nltk==3.0.5
+pandas==0.16.2
+phonenumbers==6.3.0
+Pillow==2.7.0
+psycopg2==2.6.1
+purl==1.1
+python-dateutil==2.4.2
+pytz==2015.4
+rosetta==0.3
+six==1.9.0
+sorl-thumbnail==12.2
+SQLAlchemy==1.0.8
+sqlparse==0.1.16
+transaction==1.4.4
+Unidecode==0.4.18
+wheel==0.24.0
+whitenoise==2.0.3
+zope.interface==4.1.2
