--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,3 @@
-numpy==1.9.2
-scipy==0.15.1
 Babel==1.3
 dj-database-url==0.3.0
 Django==1.8.4
@@ -20,6 +18,7 @@ factory-boy==2.4.1
 gunicorn==19.3.0
 mock==1.0.1
 nltk==3.0.5
+numpy==1.9.2
 pandas==0.16.2
 phonenumbers==6.3.0
 Pillow==2.7.0
@@ -28,12 +27,13 @@ purl==1.1
 python-dateutil==2.4.2
 pytz==2015.4
 rosetta==0.3
+scipy==0.15.1
 six==1.9.0
 sorl-thumbnail==12.2
 SQLAlchemy==1.0.8
 sqlparse==0.1.16
-transaction==1.4.4
 Unidecode==0.4.18
 wheel==0.24.0
 whitenoise==2.0.3
+Whoosh==2.7.0
 zope.interface==4.1.2
