--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ phonenumbers==6.3.0
 Pillow==2.7.0
 psycopg2==2.6.1
 purl==1.1
+pycountry==1.15
 python-dateutil==2.4.2
 pytz==2015.4
 rosetta==0.3
