--- a/requirements.txt
+++ b/requirements.txt
@@ -9,14 +9,17 @@ django-debug-toolbar-template-timings==0.6.4
 django-extensions==1.5.6
 django-extra-views==0.6.4
 django-haystack==2.3.1
+django-newsletter-subscription==0.2.0
 django-oscar==1.1.1
 django-postgrespool==0.3.0
 django-rosetta==0.7.6
 django-tables2==1.0.4
 django-treebeard==3.0
 django-widget-tweaks==1.3
+django-yandex-money==1.1.2
 factory-boy==2.4.1
 gunicorn==19.3.0
+lxml==3.4.4
 microsofttranslator==0.5
 mock==1.0.1
 nltk==3.0.5
@@ -38,6 +41,7 @@ rosetta==0.3
 scipy==0.15.1
 six==1.9.0
 sorl-thumbnail==12.2
+South==1.0.2
 SQLAlchemy==1.0.8
 sqlparse==0.1.16
 tox==2.1.1
